--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "@vercel/speed-insights": "^1.3.1",
     "next": "16.1.1",
     "next-sanity": "^12.0.5",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.2.3",
+    "react-code-block": "^1.1.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^16.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
